// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cookbook: themes - single theme (azure shorthand) > generates expected DSL 1`] = `
"workspace "undefined" {
  model {
    // Elements
    authenticationService = softwareSystem "Authentication Service" {
      tags "Microsoft Azure - Azure Active Directory" "Element" "Software System"
    }
    // Relationships
  }
  views {
    // System Landscape Views
    systemLandscape "Landscape" {
      description "undefined"
      include *
      autoLayout lr
    }
    // System Context Views
    // Container Views
    // Component Views
    theme microsoft-azure-2021.01
  }
}
"
`;

exports[`cookbook: themes - theme with element styles > generates expected DSL 1`] = `
"workspace "ThemesWithStyles" {
  model {
    // Elements
    authenticationService = softwareSystem "Authentication Service" {
      tags "Microsoft Azure - Azure Active Directory" "Element" "Software System"
    }
    // Relationships
  }
  views {
    // System Landscape Views
    systemLandscape "Landscape" {
      description "Theme with element styles."
      include *
      autoLayout lr
    }
    // System Context Views
    // Container Views
    // Component Views
    styles {
      element "Software System" {
        shape RoundedBox
        background "#ffffff"
      }
    }
    theme https://static.structurizr.com/themes/microsoft-azure-2021.01.26/theme.json
  }
}
"
`;
